<resources>
  <string name="app_name">Simple Bitcoin Wallet</string>

  <string name="empty" translatable="false"/>

  <string name="main_sync_progress_format">sync: %d/100</string>
  <string name="main_tx_hash_format">Hash: %s</string>
  <string name="main_tx_status_format">Status: %1$s (%2$d confirmations)</string>
  <string name="main_from_address_format">From: %s</string>
  <string name="main_to_address_format">To: %s</string>
  <string name="main_fee_format">Fee: %s</string>
  <string name="main_tx_received">transaction received</string>
  <string name="main_tx_sent">transaction send</string>

  <string name="explore_testnet_url" translatable="false">https://testnet.blockchain.info</string>
  <string name="explore_mainnet_url" translatable="false">https://blockchain.info</string>

  <string name="btn_confirm">confirm</string>
  <string name="btn_create_wallet_with_mnemonic">random mnemonic and create wallet</string>
  <string name="btn_restore_wallet_with_mnemonic">restore wallet with your 12 words mnemonic</string>

  <string name="restore_error">restore error, please try again</string>
  <string name="create_wallet_error">create error, please try again</string>

  <string name="send_coin_page_title">Send Coin</string>
  <string name="send_coin_to_address_hint">To Address</string>
  <string name="send_coin_amount_hint">Amount</string>
  <string name="send_coin_fee_hint">Fee</string>
  <string name="send_coin_cancel_btn">@android:string/cancel</string>
  <string name="send_coin_confirm_btn">confirm</string>
  <string name="send_coin_send_done">Send coin done</string>
  <string name="send_coin_failed">Send coin failed</string>
  <string name="send_coin_invalid_to_address">Invalid to address</string>
  <string name="send_coin_not_enough_balance">Balance is not enough</string>
  <string name="send_coin_invalid_amount">Invalid amount</string>
  <string name="send_coin_invalid_fee">Invalid fee</string>

  <string name="menu_export">export</string>

  <string name="export_to_mnemonic_title">Mnemonic</string>
  <string name="export_to_mnemonic_confirm">@android:string/ok</string>

</resources>

