<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <data>

    <import type="android.app.Activity"/>

    <variable
      name="fragmentManager"
      type="android.support.v4.app.FragmentManager"/>

    <variable
      name="viewModel"
      type="com.hsy.simplebitcoinwallet.main.send.SendCoinViewModel"/>

  </data>

  <android.support.design.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_gravity="top|center_horizontal">

      <View
        android:id="@+id/cover"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:background="@color/colorPrimary"
        android:fitsSystemWindows="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

      <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:fitsSystemWindows="true"
        app:layout_collapseMode="pin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cover"
        app:navigationOnClickListener="@{() -> viewModel.back(fragmentManager)}"
        app:title="@string/send_coin_page_title"
        app:titleTextColor="@android:color/white"/>

      <android.support.design.widget.TextInputLayout
        android:id="@+id/toAddressLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/send_coin_to_address_hint"
          android:inputType="text"
          android:maxLength="35"
          android:text="@={viewModel.toAddress}"
          android:textSize="14sp"
          tools:hint="To Address"/>

      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
        android:id="@+id/amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toAddressLayout">

        <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/send_coin_amount_hint"
          android:inputType="numberDecimal"
          android:maxLength="100"
          android:text="@={viewModel.amount}"
          android:textSize="14sp"
          tools:hint="Amount"/>

      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
        android:id="@+id/fee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amount">

        <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/send_coin_fee_hint"
          android:inputType="numberDecimal"
          android:maxLength="100"
          android:text="@={viewModel.fee}"
          android:textSize="14sp"
          tools:hint="Fee"/>

      </android.support.design.widget.TextInputLayout>

    </android.support.constraint.ConstraintLayout>

    <android.support.v7.widget.AppCompatButton
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="48dp"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      android:layout_gravity="bottom|center_horizontal"
      android:padding="16dp"
      android:enabled="@{viewModel.confirmBtnEnabled}"
      android:onClick="@{() -> viewModel.send(fragmentManager, (Activity) context)}"
      android:text="@string/send_coin_confirm_btn"
      android:textAllCaps="false"
      android:textSize="14sp"
      app:layout_behavior="com.hsy.simplebitcoinwallet.main.PushUpBehavior"
      tools:text="confirm"/>

  </android.support.design.widget.CoordinatorLayout>

</layout>